# vantus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
benches/: routing.rs
docs/: advanced-demo.md  api-reference.md  cli-reference.md  configuration-reference.md  extraction-reference.md  index.md  migration-to-macros.md  package-lock.json  package.json  production-notes.md  publishing-checklist.md  quick-start.md  technical-deep-dive.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
examples/: application.properties  cli.rs  controller.rs  main.rs
src/: cli.rs  config.rs  error_conversions.rs  id.rs  lib.rs  logging.rs  middleware.rs
src/app/: application.rs  mod.rs  module.rs  modules.rs  observability.rs  state.rs
src/core/: errors.rs  http.rs  mod.rs
src/di/: mod.rs
src/routing/: context.rs  handler.rs  mod.rs  path.rs  route.rs  router.rs
src/runtime/: mod.rs
tests/: cli.rs  config.rs  http.rs  id_generator.rs  identity.rs  macros.rs  macros_hardening.rs  module.rs  module_hardening.rs  observability.rs  properties.rs  router.rs  runtime_stress.rs  security.rs
tests/ui/: body_extractor_on_get.rs  body_extractor_on_get.stderr  invalid_parameter_pattern.rs  invalid_parameter_pattern.stderr  manual_api_removed.rs  manual_api_removed.stderr  multiple_body_extractors.rs  multiple_body_extractors.stderr  path_parameter_mismatch.rs  path_parameter_mismatch.stderr  service_parameter_removed.rs  service_parameter_removed.stderr
vantus_macros/: Cargo.toml
vantus_macros/src/: lib.rs
vantus_observability/: Cargo.toml
vantus_observability/src/: lib.rs
